// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands component renders when system is darwin 1`] = `
<div
  className="commands is-mac"
  onDoubleClick={[Function]}
>
  <div>
    <Blueprint3.ControlGroup
      fill={true}
      vertical={false}
    >
      <Blueprint3.Button
        icon="cog"
        onClick={[MockFunction]}
        title="Setting"
      />
    </Blueprint3.ControlGroup>
    <Blueprint3.ControlGroup
      fill={true}
      vertical={false}
    >
      <version-chooser
        appState={"default StateMock"}
      />
      <runner
        appState={"default StateMock"}
      />
    </Blueprint3.ControlGroup>
    <Blueprint3.ControlGroup
      fill={true}
      vertical={false}
    >
      <Blueprint3.Button
        active={true}
        icon="console"
        text="Console"
      />
    </Blueprint3.ControlGroup>
  </div>
  <div
    className="title"
  >
    Electron Fiddle
  </div>
  <div>
    <address-bar
      appState={"default StateMock"}
    />
    <action-button
      appState={"default StateMock"}
    />
  </div>
</div>
`;

exports[`Commands component renders when system not is darwin 1`] = `
<div
  className="commands"
  onDoubleClick={[Function]}
>
  <div>
    <Blueprint3.ControlGroup
      fill={true}
      vertical={false}
    >
      <Blueprint3.Button
        icon="cog"
        onClick={[MockFunction]}
        title="Setting"
      />
    </Blueprint3.ControlGroup>
    <Blueprint3.ControlGroup
      fill={true}
      vertical={false}
    >
      <version-chooser
        appState={"default StateMock"}
      />
      <runner
        appState={"default StateMock"}
      />
    </Blueprint3.ControlGroup>
    <Blueprint3.ControlGroup
      fill={true}
      vertical={false}
    >
      <Blueprint3.Button
        active={true}
        icon="console"
        text="Console"
      />
    </Blueprint3.ControlGroup>
  </div>
  <div>
    <address-bar
      appState={"default StateMock"}
    />
    <action-button
      appState={"default StateMock"}
    />
  </div>
</div>
`;
